Fixed IE 6 flickering close image Added IE 6 stylesheet Removed alert() on "Esc" keypress Fixed some bugs with this / the_flowerpot

--- a/styles/flowerpot.css
+++ b/styles/flowerpot.css
@@ -43,25 +43,3 @@ body {
 	top: 50%;
 	z-index: 102;
 }
-
-* html #flowerpotjs-overlay {
-	position: absolute;
-}
-
-* html #flowerpotjs-close {
-	background: url(images/flowerpot-close-ie6.png);
-	display: block;
-	margin-bottom: -40px;
-}
-
-* html #flowerpotjs-overlay, * html #flowerpotjs-loading {
-	left: expression(window.scrollLeft + 'px');
-	position: absolute !important;
-	top: expression(window.scrollTop + 'px');
-}
-
-* html #flowerpotjs-contents {
-	margin-left: expression(0 - parseInt(this.offsetWidth / 2) + (TBWindowMargin = document.documentElement && document.documentElement.scrollLeft || document.body.scrollLeft) + 'px');
-	margin-top: expression(0 - parseInt(this.offsetHeight / 2) + (TBWindowMargin = document.documentElement && document.documentElement.scrollTop || document.body.scrollTop) + 'px');
-	position: absolute;
-}
